# SignalClaw

./: .gitignore  LICENSE  README.md  README_zh.md  main.py  pyproject.toml  requirements.txt
evoprog/: __init__.py  __main__.py  config.py  config_loader.py  daemon.py
evoprog/evaluator/: __init__.py  control_modes.py  event_detector.py  event_dispatcher.py  event_metrics.py  metrics.py  obs_builder.py  ranker.py  runner.py  scheduler.py
evoprog/evolution/: __init__.py  diagnostics.py  population.py  signals.py
evoprog/executor/: __init__.py  constraints.py  runner.py  sandbox.py
evoprog/llm/: __init__.py  client.py  prompt.py
figures/: gen_event_evolution_curves.py  gen_fig_event_aware_summary.py  latex_includes.tex  paper_plot_style.py
figures/data/: event_aware_metrics.csv
images/src/: fig1_framework.tex  fig1_framework_body.tex  fig1_framework_render.tex  fig_scenario_overview.tex  fig_scenario_overview_body.tex  fig_scenario_overview_render.tex
scenarios/: README.md
scripts/: run_all_gpt5_evolution.sh  run_eventclaw_experiment.py
scripts/glm5_configs/: evolve_emergency_dispatcher.toml  evolve_incident_dispatcher.toml  evolve_normal_t1t2t3.toml  evolve_transit_dispatcher.toml
tables/: TABLE_event_results.tex  TABLE_main_results.tex  TABLE_routine_results.tex
